# QtVideoDisplayer-msg

./: .clang-format  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/private/: EventBus.cpp  MessageBus.cpp  MessageBus.h  MessageMgr.cpp  MessageStruct.cpp
src/public/: Event.h  EventBus.h  EventSystem.h  MessageEnum.h  MessageMgr.h  MessageStruct.h
test/: CMakeLists.txt  main.cpp
